--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,14 @@
         <%= @user.name %>
       </h1>
     </section>
+    <section>
+        <%= render 'shared/stats' %>
+    </section>
     </aside>
     <div class="span8">
+      a
+      <%= render 'follow_form' %>
+      b
       <% if @user.microposts.any? %>
         <h3> Microposts (<%= @user.microposts.count %>)</h3>
         <ol class="microposts">
